Have created custom styling for the headers, have also added padding that allows for content to be wrapped prior to its original wrapping point. Have used a media query to change the size of the headers on the small screen sizes (mobile) as the pictures are responsive and automatically resize due to materialize having a class set up to control this. Have changed the color of the buttons. Also used media queries to change the padding used in the select boxes and the dropdowns to ensure they werent oversized or overlapping other text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -233,19 +233,14 @@ main a.text_links:hover {
     width: 1.5rem;
 }
 
+
 /* SEARCH */
 .search_box{
     padding-bottom: 0.75rem;
 }
 
 
-/* REGISTER */
-
-
-/* LOG IN */
-
 /* ADD EXERCISE, EDIT EXERCISE, DELETE EXERCISE */
-
 .hidden {
     display: none;
 }
@@ -307,9 +302,7 @@ h5.highlight{
     color: #ffab40;
 }
 /* EXERCISE */
-.exercise_creator{
 
-}
 .favourite-icon {
     color: #ffab40;
     -webkit-transition: color .3s ease-in-out;
@@ -322,18 +315,4 @@ h5.highlight{
     background-color: transparent;
 }
 
-.pagination li a {
-    color: white;
-    -webkit-transition: color .3s ease-in-out;
-    transition: color .3s ease-in-out;
-    width: 1rem;
-}
-.pagination li a:focus,
-.pagination li a:hover {
-    color: #ffab40;
-}
-.pagination li a.active {
-    color: #ffab40;
-    width: 1.5rem;
-}
 
